--- a/index.html
+++ b/index.html
@@ -19,11 +19,28 @@
       font-style: normal;
   }
 
+  @font-face {
+      font-family: "Inria Serif";
+      src: url("https://worldskills.org/application/themes/worldskills_org/fonts/InriaSerif/InriaSerif-Bold.eot");
+      src: url("https://worldskills.org/application/themes/worldskills_org/fonts/InriaSerif/InriaSerif-Bold.eot?#iefix") format("embedded-opentype"),
+           url("https://worldskills.org/application/themes/worldskills_org/fonts/InriaSerif/InriaSerif-Bold.woff2") format("woff2"),
+           url("https://worldskills.org/application/themes/worldskills_org/fonts/InriaSerif/InriaSerif-Bold.woff") format("woff"),
+           url("https://worldskills.org/application/themes/worldskills_org/fonts/InriaSerif/InriaSerif-Bold.svg") format("svg");
+      font-weight: bold;
+      font-style: normal;
+  }
+
   body {
     background-color: #0084AD;
     color: #fff;
     font-family: "FrutigerLTW04", Frutiger, Arial, sans-serif;
     font-size: 1rem;
+  }
+
+  #title {
+    font-family: "Inria Serif", serif;
+    font-weight: bold;
+    font-size: 5rem;
   }
 
   #time {
@@ -33,17 +50,33 @@
 </head>
 <body>
 
+  <div id="title">WorldSkills</div>
+
   <div id="time">00:00</div>
 
   <script>
 
     var i = 0;
-    var target = window.location.search.substr(1);
+    var query = {};
+    query.time = '';
+    query.title = '';
+    var search = window.location.search.substring(1);
+    var vars = search.split('&');
+    for (var i = 0; i < vars.length; i++) {
+        var pair = vars[i].split('=');
+        var key = decodeURIComponent(pair[0]);
+        var value = decodeURIComponent(pair[1]);
+        query[key] = value;
+    }
+
+    if (query.title) {
+      document.getElementById('title').innerText = query.title;
+    }
 
     setInterval(function () {
 
-      if (target) {
-        i = Date.parse(target) - Date.now();
+      if (query.time) {
+        i = Date.parse(query.time) - Date.now();
         i = Math.floor(i / 1000);
         if (i < 0) {
           i = 0;
