Move background color

--- a/index.html
+++ b/index.html
@@ -30,8 +30,11 @@
       font-style: normal;
   }
 
-  body {
+  html {
     background-color: #000;
+  }
+
+  body {
     color: #fff;
     font-family: "FrutigerLTW04", Frutiger, Arial, sans-serif;
     font-size: 2vw;
