--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     font-family: "FrutigerLTW04", Frutiger, Arial, sans-serif;
     font-size: 2vw;
     user-select: none;
-    margin: 5vw 3vw;
+    margin: 5vw;
   }
 
   #title {
